# lp_project

./: .editorconfig  .env_template  .pre-commit-config.yaml  Dockerfile  README.md  create_admin.py  docker-compose.yml  pyproject.toml  setup.cfg  wsgi.py
.github/workflows/: build.yml
app/: __init__.py  app.py  blueprints.py  config.py  views.py
app/admin/: decorators.py  forms.py  utils.py  views.py
app/articles/: models.py  views.py
app/models/: articles.py  users.py
app/user/: forms.py  models.py  utils.py  views.py
app/users/: forms.py  models.py  views.py
migrations/versions/: ef2aadfb99f0_first_migration.py  fdec48c9b2a5_.py
static/css/: style.css
templates/: base.html  index.html  login.html  menu.html  messages.html  register.html
templates/admin/: add_role.html  index.html  menu.html  users.html  verification_users.html
templates/user/: login.html  register.html
