[tool.poetry]
name = "lp_project"
version = "0.1.0"
description = ""
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.32"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Werkzeug = "^2.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-builtins = "^1.5.3"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
