[tool.poetry]
name = "lp_project"
version = "0.1.0"
description = ""
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.0.3"
Werkzeug = "2.0"
Flask-Login = "0.5.0"
Flask-Migrate = "3.1.0"
Flask-SQLAlchemy = "2.5.1"
Flask-WTF = "1.0.0"
email-validator = "1.1.3"
pg8000 = "1.24.1"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
flake8-black = "0.3.2"
flake8-builtins = "1.5.3"
flake8-import-order = "0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
