[tool.poetry]
name = "lp_project"
version = "0.2.0"
description = "Test project for Learn Python"
authors = ["Stas Cartoon <bycs@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.0.3"
Werkzeug = "2.0"
Flask-Login = "0.5.0"
Flask-Migrate = "3.1.0"
Flask-SQLAlchemy = "2.5.1"
Flask-WTF = "1.0.0"
email-validator = "1.1.3"
pg8000 = "1.24.1"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
flake8 = "4.0.1"
pyproject-flake8 = "^0.0.1-alpha.4"
flake8-black = "0.3.2"
flake8-builtins = "1.5.3"
flake8-import-order = "0.18.1"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = """
    ('
    |.idea/
    |.venv/
    |.vscode/
    ')
"""

# call using pflake8
[tool.flake8]
max-line-length = 120
max-complexity = 8
ignore = "A003,"
exclude = """
    .idea/
    .venv/
    .vscode/
    migrations/
"""

[virtualenvs]
create = true
in-project = true
path = ".venv"
